# mini-kint

./: .clang-format  .gitignore  CMakeLists.txt  README.md
SROA/: CMakeLists.txt  ScalarReplAggregates-jiawei6.cpp
SwapAdd/: CMakeLists.txt  SwapAdd.cpp
mkint/: CMakeLists.txt  log.cpp  log.hpp  mkint.cpp  rang.hpp  smt.hpp
pass/: CMakeLists.txt
sora/: ScalarReplAggregates-jiawei6.cpp
tests/: CMakeLists.txt  Makefile  lit.cfg.py  lit.site.cfg.py.in  llvm_lite.py  parser.py  property_test.py  statistics.py
tests/cve/: cmp-1.c  cmp_false-0-__mkint_ann_foo.c  cmp_false-1-__mkint_ann_foo.c  cmp_flase-0-__mkint_ann_foo.c  div_zero-0-sys_psf_fwrite.c  int_overflow-0-malloc.c  int_overflow-2-xmalloc.c  int_overflow_ub-0-malloc.c  int_overflow_ub-1-kmalloc.c
tests/linux/: agp-2011-1745.c  agp-2011-1746.c  agp-2011-2022.c  aio-2010-3067.c  array_index-0-sys_dvb_ca_ioctl.c  array_index-1-sys_CIFSFindNext.c  array_index-2-pkt_find_dev_from_minor.c  array_index-3-sys_si4713_write_econtrol_string.c  av7110-2011-0521.c  ax25-2009-2909.c  bcm-2010-2959.c  btrfs-2010-2538.c  cfg80211-2009-3280.c  cifs-2011-3191.c  gdth-2010-4157.c  int_overflow-0-__page_empty.c  int_overflow-0-none.c  int_overflow-1-agp_alloc_page_array.c  int_overflow-1-copy_from_user.c  int_overflow-10-kmalloc.c  int_overflow-11-sys_rose_sendmsg.c  int_overflow-12-kmalloc.c  int_overflow-13-kzalloc.c  int_overflow-14-sys_xfs_readlink.c  int_overflow-2-sys_agp_generic_remove_memory.c  int_overflow-3-sys_do_io_submit.c  int_overflow-4-kmalloc.c  int_overflow-4-sys_bcm_tx_setup.c  int_overflow-5-sys_btrfs_ioctl_clone.c  int_overflow-6-sys_cfg80211_find_ie.c  int_overflow-7-gdth_ioctl_alloc.c  int_overflow-8-sys_kvm_dev_ioctl_get_supported_cpuid.c  int_overflow-9-sys__ctl_do_mpt_command.c  kvm-2009-3638.c  mpt2sas-2011-1494.c  oabi-2011-1759.c  pktcdvd-2010-3437.c  rose-2009-1265.c  sctp-2008-3526.c  si4713-2011-2700.c  (+2 more)
tests/linux_patch/: array_index-0-none.c  array_index-1-none.c  array_index-2-none.c  array_index-3-none.c  int_overflow-0-none.c  int_overflow-1-none.c  int_overflow-10-none.c  int_overflow-11-none.c  int_overflow-12-none.c  int_overflow-13-none.c  int_overflow-14-none.c  int_overflow-15-none.c  int_overflow-2-none.c  int_overflow-3-none.c  int_overflow-4-none.c  int_overflow-5-none.c  int_overflow-6-none.c  int_overflow-7-none.c  int_overflow-8-none.c  int_overflow-9-none.c
tests/manual/: array_index-0-sys_idx.c  array_index-1-none.c  array_index-1-sys_idx.c  array_index-2-none.c  array_index-3-sys_idx.c  array_index-5-sys_idx.c  bad_shift-0-sys_shift.c  bad_shift-1-sys_shift.c  bad_shift-5-none.c  (+14 more)
(+29 files in other folders)
